--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  firebase_core: ^0.4.4+3
+  firebase_analytics: ^5.0.11
+
+  cloud_firestore: ^0.13.4+2
+
+  firebase_auth: ^0.15.5+3
+  google_sign_in: ^4.0.1+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
