--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   firebase_auth: ^0.15.5+3
   google_sign_in: ^4.0.1+1
 
+  provider: 4.0.4
+
+  font_awesome_flutter: 8.8.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
